crates/math-core/src/snapshots/math_core__parser__tests__sum_relation.snap
---
source: crates/math-core/src/parser.rs
expression: "{\\sum = 4}"
---
[
  Row(
    nodes: [
      Operator(
        op: "∑",
        attrs: OpAttrs(""),
        roles: OpRoles("ROLE_PREFIX"),
        size: None,
        left: Some(Zero),
        right: Some(Zero),
      ),
      Operator(
        op: "=",
        attrs: OpAttrs(""),
        roles: OpRoles("ROLE_INFIX"),
        size: None,
        left: None,
        right: None,
      ),
      Number("4"),
    ],
    attrs: RowAttrs(
      color: None,
      style: None,
      math_shift_compact: false,
    ),
  ),
]
