crates/math-core/src/snapshots/math_core__parser__tests__text_internal_string_literal.snap
---
source: crates/math-core/src/parser.rs
expression: "[Text(None), InternalStringLiteral(\"hi\")]"
---
[
  Text(
    text_style: None,
    text_size: None,
    text_voffset: None,
    text: "hi",
  ),
]
