crates/math-core/src/snapshots/math_core__parser__tests__text_internal_string_literal_and_other.snap
---
source: crates/math-core/src/parser.rs
expression: "[Text(None), GroupBegin, Letter(\"a\", MathOrText), InternalStringLiteral(\"hi\"), GroupEnd]"
---
[
  Text(
    text_style: None,
    text_size: None,
    text_voffset: None,
    text: "ahi",
  ),
]
