crates/math-core/src/snapshots/math_core__parser__tests__text_number.snap
---
source: crates/math-core/src/parser.rs
expression: "\\text123"
---
[
  Text(
    text_style: None,
    text_size: None,
    text: "1",
  ),
  Number("23"),
]
