crates/math-core/src/snapshots/math_core__parser__tests__textbf.snap
---
source: crates/math-core/src/parser.rs
expression: "\\textbf{abc}"
---
[
  Text(
    text_style: Some(Bold),
    text_size: None,
    text: "abc",
  ),
]
